# ufmt

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build.ninja  justfile  meson.build  text_file.hpp
benchmark/: .clangd  CMakeLists.txt  benchmark.cpp  meson.build  ubench.hpp
include/ufmt/: .clangd  buffered_file.hpp  fixed_string.hpp  json.hpp  print.hpp  text.hpp  text_file.hpp  utf8.hpp
test/: CMakeLists.txt  fixed_string.hpp  fixed_string.test.hpp  json.test.hpp  meson.build  test.cpp  test.sln  test.vcxproj  test.vcxproj.filters  text.hpp  text.test.hpp
